--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "cytoscape-cola": "^2.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "interval-promise": "^1.4.0",
     "mongoose": "^5.10.5",
